--- a/ufg/docs/agradecimentos.tex
+++ b/ufg/docs/agradecimentos.tex
@@ -5,7 +5,15 @@
 
 \hypertarget{estilo:agradecimentos}{} %% uso para este Guia
 
-Escreva aqui seus agradecimentos...
+Agradeço ao orientador e amigo Wesley Pacheco Calixto, por sua dedicação e compreensão. Por ter acreditado em mim desde o início, e ter permitido que eu seguisse
+o caminho onde pude florescer.
+
+Aos colegas do NExT (Nucleo de Estudos Experimentais e Tecnologicos), pelo companheirismo, dedicaçao e amizade.
+
+A minha família, pelo amor e incentivo incondicional, seja em momentos de dificuldade ou de alegria.
+
+Aos colegas de trabalho e amigos da Data Traffic, pela compreensão, incentivo, e risadas.
+
+A CAPES pelo aporte para o desenvolvimento deste trabalho.
+
 \end{agradecimentos}
-
-
