--- a/ufg/docs/dedicatoria.tex
+++ b/ufg/docs/dedicatoria.tex
@@ -7,7 +7,7 @@
 
 %% use 'a meus' em vez de 'aos meus', isto é, não use o artigo definido com pronomes possessivos
 
-\newcommand{\mytext}{Escreva aqui sua dedicatória.}
+\newcommand{\mytext}{A todas as pessoas que me acolheram de alguma forma. Entes e amigos queridos que acreditaram em mim. A eles dedico este nosso trabalho.}
 
 %%% sugestão de estilo
 \ifcalligra %% fonte calligra presente nas versões mais novas do MiKTeX (>= 2.4)
