--- a/ufg/configuracaoUFG.tex
+++ b/ufg/configuracaoUFG.tex
@@ -4,15 +4,20 @@
 \instituicaosigla{[UFG] \& [EMC]}
 \instituicaocidade{[Goiânia - Goiás - Brasil]}
 
-\author{Seu Nome Aqui} %% coloque o nome do(s) autor(es)
-\email{seuemail@gmail.com}
+\author{Bernardo Araujo Rodrigues} %% coloque o nome do(s) autor(es)
+\email{bernardoaraujor@gmail.com}
 
 %\titulo{Controlador Preditivo baseado em Modelo Não Linear Sintonizado por Algoritmo Genético Aplicado ao Controle de Velocidade de Máquina de Corrente Contínua Acionada por Retificador Trifásico Controlado: Análise Comparativa com Controlador PI Cascata Sintonizado por Algoritmo Genético} %% no idioma principal
-\titulo{Título do seu trabalho aqui}
+\titulo{Corinda: Quebrando Hashes de Senhas Concorrentemente com a Linguagem Go}
 \date{\today}
 
-\descriccao{Dissertação apresentada à Banca Examinadora como exigência parcial para a obtenção do 
-título de Mestre em Engenharia Elétrica e de Computação pela Universidade Federal de Goiás (UFG), Escola de Engenharia Elétrica, Mecânica e de Computação (EMC), sob a orientação do Prof. Dr. Wesley Pacheco Calixto}
+\descriccao{
+  Dissertação apresentada a Banca Examinadora como exigência parcial para a
+   obtenção do tí­tulo de Mestre em Engenharia Elétrica e de Computação pela
+   Universidade Federal de Goiás (UFG), Escola de Engenharia Elétrica,
+   Mecânica e de Computação (EMC), sob a orientação do Prof. Dr. Wesley
+   Pacheco Calixto.
+}
 
 \tituloverso{\vspace{-0.9cm}\textbf{}}
 \descriccaoverso{}
@@ -24,30 +29,35 @@ título de Mestre em Engenharia Elétrica e de Computação pela Universidade Federa
 \instituicaosigla{[UFG] \& [EMC]}
 \instituicaocidade{[Goiânia - Goiás - Brasil]}
 
-\author{Seu Nome Aqui} %% coloque o nome do(s) autor(es)
-\email{seuemail@gmail.com}
+\author{Bernardo Araujo Rodrigues} %% coloque o nome do(s) autor(es)
+\email{bernardoaraujor@gmail.com}
 
 %\titulo{Controlador Preditivo baseado em Modelo Não Linear Sintonizado por Algoritmo Genético Aplicado ao Controle de Velocidade de Máquina de Corrente Contínua Acionada por Retificador Trifásico Controlado: Análise Comparativa com Controlador PI Cascata Sintonizado por Algoritmo Genético} %% no idioma principal
-\titulo{Título do seu trabalho aqui}
+\titulo{Corinda: Quebrando Hashes de Senhas Concorrentemente com a Linguagem de Programação Go}
 %\title{Nonlinear Model Predictive Controller Tuned by Genetic Algorithm Applied do Direct Current Motor Speed Control Triggered by Three Phase Controlled Rectifier: Comparative Analysis with Cascade PI Controller Tuned by Genetic Algorithm} %% no idioma secundario
-\title{Title of your work here}
+\title{Corinda: Cracking Password Hashes with Go Programming Language}
 \date{\today}
 %\serieinpe{} %% será determinado pela biblioteca posteriormente
 
-\descriccao{Dissertação apresentada à Banca Examinadora como exigência parcial para a obtenção do título de Mestre em Engenharia Elétrica e de Computação pela Universidade Federal de Goiás (UFG), Escola de Engenharia Elétrica, Mecânica e de Computação (EMC), sob a orientação do Prof. Dr. Wesley Pacheco Calixto}
+\descriccao{Dissertação apresentada a Banca Examinadora como exigência parcial para a
+   obtenção do tí­tulo de Mestre em Engenharia Elétrica e de Computação pela
+   Universidade Federal de Goiás (UFG), Escola de Engenharia Elétrica,
+   Mecânica e de Computação (EMC), sob a orientação do Prof. Dr. Wesley
+   Pacheco Calixto.}
 
 %%%%%%%%%%%%%%%FICHA CATALOGRÁFICA
 
 \cutterFICHAC{C331s}
-\autorUltimoNomeFICHAC{Carvalho, Douglas Freire, 11/12/89} %% exemplo: Fuckner, Marcus André
-\autorAbreviadoFICHAC {Carvalho, D. F.} %% Não usado - deixar vazio
-\tituloFICHAC{Sintonia~de~Controlador Preditivo~Não~Linear: Análise~Comparativa~com Técnicas~Tradicionais}
+\autorUltimoNomeFICHAC{Rodrigues, Bernardo Araujo, 31/07/90} %% exemplo: Fuckner, Marcus André
+\autorAbreviadoFICHAC {Rodrigues, B. A.} %% Não usado - deixar vazio
+\tituloFICHAC{Corinda: Quebrando \textit{Hashes} de Senhas Concorrentemente com a Linguagem de Programao Go [manuscrito]}
 \paginasFICHAC{\pageref{LastPage} f. : il}%% número total de páginas
 \palavraschaveFICHAC{Orientador: Wesley Pacheco Calixto - UFG\\\\
 Dissertação - Universidade Federal de Goiás - UFG, Escola de Engenharia Elétrica, Mecânica e de Computação - EMC\\\\
 Inclui bibliografia.\\\\
-1.Controle Preditivo 2.Otimização 3.Algorítimo Genético 4.Motor CC.
-I. Calixto, Wesley Pacheco. Universidade Federal de Goiás. Programa de Pós-Graduação em Engenharia Elétrica e de Computação. III. Título} %% recomenda-se pelo menos 5 palavras-chaves - \mbox{} é para evitar hifenização
+1.Senhas - Teses. 2.\textit{Hashes} - Teses. 3.Segurança da Informação - Teses.  I. Calixto, Wesley
+Pacheco; II. Universidade Federal de Goiás.  Programa de Pós-Graduação em Engenharia Elétrica e de Computação. III. Corinda: Quebrando \textit{Hashes} de Senhas Concorrentemente com a Linguagem de Programao Go
+} %% recomenda-se pelo menos 5 palavras-chaves - \mbox{} é para evitar hifenização
 \numeroCDUFICHAC{000.0.000:000.0} %% número do CDU
 
 %%%tdiinpe
