--- a/ufg/docs/resumo.tex
+++ b/ufg/docs/resumo.tex
@@ -6,6 +6,7 @@
 \hypertarget{estilo:resumo}{} %% uso para este Guia
 
 Escreva aqui o resumo do seu trabalho...
+Testando acentuação.
 
 \end{resumo}
 
